--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
   <div class="flex items-center gap-8">
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/industries">Industries</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/solutions">Solutions</a>
-    <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/contactus">Contact Us</a>
+    <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/contactus.html">Contact Us</a>
   </div>
 </nav>
 
