refactor: improve contact page layout
- Standardize section spacing using space-y-8
- Move FAQ section to top of page
- Update padding consistency across sections
- Fix button styles to match brand guidelines

--- a/contactus.html
+++ b/contactus.html
@@ -35,97 +35,15 @@
 </script>
 <div class="layout-container flex h-full grow flex-col">
 <main class="px-4 sm:px-8 md:px-16 lg:px-24 xl:px-40 flex flex-1 justify-center py-8 bg-gray-50">
-<div class="layout-content-container flex flex-col max-w-5xl flex-1 gap-8">
+<div class="layout-content-container flex flex-col max-w-5xl flex-1 space-y-8">
 <section class="text-center">
 <h1 class="text-gray-900 tracking-tight text-4xl font-bold leading-tight">Contact Our Demo Center</h1>
 <p class="text-gray-600 text-lg font-normal leading-relaxed mt-4 max-w-3xl mx-auto">
                 We're here to help. Reach out to us with any questions or inquiries about our technological solutions. We'll get back to you promptly.
               </p>
 </section>
-<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 <section class="bg-white p-6 rounded-xl shadow-lg">
-<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Send Us a Message</h2>
-<form class="space-y-6">
-<div>
-<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="name">Full Name</label>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white h-12 placeholder:text-gray-400 px-4 text-base font-normal leading-normal transition-colors" id="name" placeholder="e.g., John Doe" type="text"/>
-</div>
-<div>
-<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="email">Email Address</label>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white h-12 placeholder:text-gray-400 px-4 text-base font-normal leading-normal transition-colors" id="email" placeholder="e.g., john.doe@example.com" type="email"/>
-</div>
-<div>
-<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="subject">Subject</label>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white h-12 placeholder:text-gray-400 px-4 text-base font-normal leading-normal transition-colors" id="subject" placeholder="e.g., Demo Request for AI Solutions" type="text"/>
-</div>
-<div>
-<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="message">Message</label>
-<textarea class="form-textarea flex w-full min-w-0 flex-1 resize-y overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white min-h-32 placeholder:text-gray-400 p-4 text-base font-normal leading-normal transition-colors" id="message" placeholder="Tell us more about your inquiry..."></textarea>
-</div>
-<button class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-[#1672ce] text-white text-base font-semibold leading-normal tracking-wide shadow-md hover:bg-blue-700 transition-colors focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" type="submit">
-<span class="truncate">Send Message</span>
-</button>
-</form>
-</section>
-<div class="space-y-8">
-<section class="bg-white p-6 rounded-xl shadow-lg">
-<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Schedule a Demo</h2>
-<p class="text-gray-600 text-sm font-normal leading-relaxed mb-6">
-                    Book a live demonstration of our solutions at our Demo Center. Choose a convenient time slot and we'll confirm your appointment.
-                  </p>
-<button class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-green-500 text-white text-base font-semibold leading-normal tracking-wide shadow-md hover:bg-green-600 transition-colors focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
-<span class="truncate">Schedule Your Demo</span>
-</button>
-</section>
-<section class="bg-white p-6 rounded-xl shadow-lg">
-<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Direct Contact</h2>
-<div class="space-y-4">
-<div class="flex items-start gap-4">
-<div class="text-[#1672ce] flex items-center justify-center rounded-full bg-blue-100 shrink-0 size-10 mt-1" data-icon="Phone" data-size="20px" data-weight="regular">
-<svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-<path d="M222.37,158.46l-47.11-21.11-.13-.06a16,16,0,0,0-15.17,1.4,8.12,8.12,0,0,0-.75.56L134.87,160c-15.42-7.49-31.34-23.29-38.83-38.51l20.78-24.71c.2-.25.39-.5.57-.77a16,16,0,0,0,1.32-15.06l0-.12L97.54,33.64a16,16,0,0,0-16.62-9.52A56.26,56.26,0,0,0,32,80c0,79.4,64.6,144,144,144a56.26,56.26,0,0,0,55.88-48.92A16,16,0,0,0,222.37,158.46ZM176,208A128.14,128.14,0,0,1,48,80,40.2,40.2,0,0,1,82.87,40a.61.61,0,0,0,0,.12l21,47L83.2,111.86a6.13,6.13,0,0,0-.57.77,16,16,0,0,0-1,15.7c9.06,18.53,27.73,37.06,46.46,46.11a16,16,0,0,0,15.75-1.14,8.44,8.44,0,0,0,.74-.56L168.89,152l47,21.05h0s.08,0,.11,0A40.21,40.21,0,0,1,176,208Z"></path>
-</svg>
-</div>
-<div>
-<p class="text-gray-700 text-base font-medium leading-normal">Phone</p>
-<a class="text-[#1672ce] hover:underline text-sm font-normal leading-normal" href="tel:+34915551234">+34 91 555 1234</a>
-</div>
-</div>
-<div class="flex items-start gap-4">
-<div class="text-[#1672ce] flex items-center justify-center rounded-full bg-blue-100 shrink-0 size-10 mt-1" data-icon="Envelope" data-size="20px" data-weight="regular">
-<svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-<path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48Zm-96,85.15L52.57,64H203.43ZM98.71,128,40,181.81V74.19Zm11.84,10.85,12,11.05a8,8,0,0,0,10.82,0l12-11.05,58,53.15H52.57ZM157.29,128,216,74.18V181.82Z"></path>
-</svg>
-</div>
-<div>
-<p class="text-gray-700 text-base font-medium leading-normal">Email</p>
-<a class="text-[#1672ce] hover:underline text-sm font-normal leading-normal" href="mailto:info@nttdata.es">info@nttdata.es</a>
-</div>
-</div>
-</div>
-</section>
-</div>
-</div>
-<section class="bg-white p-8 rounded-xl shadow-lg">
-<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-6">Our Locations</h2>
-<div class="aspect-[16/9] rounded-lg overflow-hidden shadow-md mb-4">
-<img alt="Map of NTT DATA Spain office locations" class="w-full h-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD4PW9as0jMEXBnOKHqJbirtoJ4JsEXm8mjM3pPcxqaQ2akZ67-p3vOaoVUG5Zi19K_H3pVDjCsMnwzkWX451IugpOkr8X7yn0se9GqB2SaigGN7xLe-CwizKh7iP4NFEpUDuHNCwMIbQDKlBYjcEN0UPlZoKEihoKbKTCtE47dQuu2JUTJAXjooPwdRSK0qcEyyRcYMzYkOcC0QWK6y7xcDyc_lApTLiU0GSCQkcJebxiJ_4b-W8TWM3NWR2tvnXmXpdCckYHVmZc"/>
-</div>
-<p class="text-gray-600 text-sm font-normal leading-relaxed">
-                Visit our offices in Madrid, Barcelona, and Valencia. Our team is ready to welcome you and discuss your needs.
-              </p>
-</section>
-<section class="bg-white p-8 rounded-xl shadow-lg">
-<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-6">Live Chat Support</h2>
-<p class="text-gray-600 text-sm font-normal leading-relaxed mb-6">
-                Chat with our support team in real-time for immediate assistance. Click the button below to start a conversation.
-              </p>
-<button class="flex min-w-[84px] max-w-xs cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-teal-500 text-white text-base font-semibold leading-normal tracking-wide shadow-md hover:bg-teal-600 transition-colors focus:ring-2 focus:ring-teal-500 focus:ring-offset-2">
-<span class="truncate">Start Live Chat</span>
-</button>
-</section>
-<section class="bg-white p-8 rounded-xl shadow-lg">
-<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-6">Frequently Asked Questions</h2>
+<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Frequently Asked Questions</h2>
 <div class="space-y-4">
 <details class="group rounded-lg border border-gray-200 bg-gray-50/50 p-4 transition-all duration-300 ease-in-out hover:border-gray-300">
 <summary class="flex cursor-pointer items-center justify-between gap-3 text-gray-700 font-medium text-sm leading-normal list-none">
@@ -161,6 +79,88 @@
 <p class="text-gray-600 text-sm font-normal leading-relaxed mt-3 pt-3 border-t border-gray-200">Availability of parking varies by location. Please inquire when scheduling your visit, and we'll provide specific details for your chosen office.</p>
 </details>
 </div>
+</section>
+<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+<section class="bg-white p-6 rounded-xl shadow-lg">
+<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Send Us a Message</h2>
+<form class="space-y-6">
+<div>
+<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="name">Full Name</label>
+<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white h-12 placeholder:text-gray-400 px-4 text-base font-normal leading-normal transition-colors" id="name" placeholder="e.g., John Doe" type="text"/>
+</div>
+<div>
+<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="email">Email Address</label>
+<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white h-12 placeholder:text-gray-400 px-4 text-base font-normal leading-normal transition-colors" id="email" placeholder="e.g., john.doe@example.com" type="email"/>
+</div>
+<div>
+<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="subject">Subject</label>
+<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white h-12 placeholder:text-gray-400 px-4 text-base font-normal leading-normal transition-colors" id="subject" placeholder="e.g., Demo Request for AI Solutions" type="text"/>
+</div>
+<div>
+<label class="block text-gray-700 text-sm font-medium leading-normal pb-2" for="message">Message</label>
+<textarea class="form-textarea flex w-full min-w-0 flex-1 resize-y overflow-hidden rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#1672ce]/50 border border-gray-300 bg-white min-h-32 placeholder:text-gray-400 p-4 text-base font-normal leading-normal transition-colors" id="message" placeholder="Tell us more about your inquiry..."></textarea>
+</div>
+<button class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-[#1672ce] text-white text-base font-semibold leading-normal tracking-wide shadow-md hover:bg-blue-700 transition-colors focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" type="submit">
+<span class="truncate">Send Message</span>
+</button>
+</form>
+</section>
+<div class="space-y-8">
+<section class="bg-white p-6 rounded-xl shadow-lg">
+<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Schedule a Demo</h2>
+<p class="text-gray-600 text-sm font-normal leading-relaxed mb-6">
+                    Book a live demonstration of our solutions at our Demo Center. Choose a convenient time slot and we'll confirm your appointment.
+                  </p>
+<button class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-[#1672ce] text-white text-base font-semibold leading-normal tracking-wide shadow-md hover:bg-blue-700 transition-colors focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+<span class="truncate">Schedule Your Demo</span>
+</button>
+</section>
+<section class="bg-white p-6 rounded-xl shadow-lg">
+<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Live Chat Support</h2>
+<p class="text-gray-600 text-sm font-normal leading-relaxed mb-6">
+                Chat with our support team in real-time for immediate assistance. Click the button below to start a conversation.
+              </p>
+<button class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-[#1672ce] text-white text-base font-semibold leading-normal tracking-wide shadow-md hover:bg-blue-700 transition-colors focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+<span class="truncate">Start Live Chat</span>
+</button>
+</section>
+<section class="bg-white p-6 rounded-xl shadow-lg">
+<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Direct Contact</h2>
+<div class="space-y-4">
+<div class="flex items-start gap-4">
+<div class="text-[#1672ce] flex items-center justify-center rounded-full bg-blue-100 shrink-0 size-10 mt-1" data-icon="Phone" data-size="20px" data-weight="regular">
+<svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
+<path d="M222.37,158.46l-47.11-21.11-.13-.06a16,16,0,0,0-15.17,1.4,8.12,8.12,0,0,0-.75.56L134.87,160c-15.42-7.49-31.34-23.29-38.83-38.51l20.78-24.71c.2-.25.39-.5.57-.77a16,16,0,0,0,1.32-15.06l0-.12L97.54,33.64a16,16,0,0,0-16.62-9.52A56.26,56.26,0,0,0,32,80c0,79.4,64.6,144,144,144a56.26,56.26,0,0,0,55.88-48.92A16,16,0,0,0,222.37,158.46ZM176,208A128.14,128.14,0,0,1,48,80,40.2,40.2,0,0,1,82.87,40a.61.61,0,0,0,0,.12l21,47L83.2,111.86a6.13,6.13,0,0,0-.57.77,16,16,0,0,0-1,15.7c9.06,18.53,27.73,37.06,46.46,46.11a16,16,0,0,0,15.75-1.14,8.44,8.44,0,0,0,.74-.56L168.89,152l47,21.05h0s.08,0,.11,0A40.21,40.21,0,0,1,176,208Z"></path>
+</svg>
+</div>
+<div>
+<p class="text-gray-700 text-base font-medium leading-normal">Phone</p>
+<a class="text-[#1672ce] hover:underline text-sm font-normal leading-normal" href="tel:+34915551234">+34 91 555 1234</a>
+</div>
+</div>
+<div class="flex items-start gap-4">
+<div class="text-[#1672ce] flex items-center justify-center rounded-full bg-blue-100 shrink-0 size-10 mt-1" data-icon="Envelope" data-size="20px" data-weight="regular">
+<svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
+<path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48Zm-96,85.15L52.57,64H203.43ZM98.71,128,40,181.81V74.19Zm11.84,10.85,12,11.05a8,8,0,0,0,10.82,0l12-11.05,58,53.15H52.57ZM157.29,128,216,74.18V181.82Z"></path>
+</svg>
+</div>
+<div>
+<p class="text-gray-700 text-base font-medium leading-normal">Email</p>
+<a class="text-[#1672ce] hover:underline text-sm font-normal leading-normal" href="mailto:info@nttdata.es">info@nttdata.es</a>
+</div>
+</div>
+</div>
+</section>
+</div>
+</div>
+<section class="bg-white p-6 rounded-xl shadow-lg">
+<h2 class="text-gray-800 text-2xl font-semibold leading-tight tracking-tight mb-4">Our Locations</h2>
+<div class="aspect-[16/9] rounded-lg overflow-hidden shadow-md mb-4">
+<img alt="Map of NTT DATA Spain office locations" class="w-full h-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD4PW9as0jMEXBnOKHqJbirtoJ4JsEXm8mjM3pPcxqaQ2akZ67-p3vOaoVUG5Zi19K_H3pVDjCsMnwzkWX451IugpOkr8X7yn0se9GqB2SaigGN7xLe-CwizKh7iP4NFEpUDuHNCwMIbQDKlBYjcEN0UPlZoKEihoKbKTCtE47dQuu2JUTJAXjooPwdRSK0qcEyyRcYMzYkOcC0QWK6y7xcDyc_lApTLiU0GSCQkcJebxiJ_4b-W8TWM3NWR2tvnXmXpdCckYHVmZc"/>
+</div>
+<p class="text-gray-600 text-sm font-normal leading-relaxed">
+                Visit our offices in Madrid, Barcelona, and Valencia. Our team is ready to welcome you and discuss your needs.
+              </p>
 </section>
 </div>
 </main>
