Update: Improved Industries section with proper links and smooth scrolling

--- a/industries/index.html
+++ b/industries/index.html
@@ -154,7 +154,7 @@
                     <div class="dot"></div>
                 </div>
                 <div class="tooltip bg-white p-3 rounded-lg shadow-lg absolute bottom-full mb-2 text-sm">
-                    <strong class="block text-blue-600 mb-1">Life Sciences & Pharma</strong>
+                    <strong>Life Sciences & Pharma</strong>
                     <p class="text-gray-600">Innovative solutions for healthcare and pharmaceutical industries.</p>
                 </div>
             </div>
@@ -166,7 +166,7 @@
                     <div class="dot"></div>
                 </div>
                 <div class="tooltip bg-white p-3 rounded-lg shadow-lg absolute bottom-full mb-2 text-sm">
-                    <strong class="block text-blue-600 mb-1">Retail</strong>
+                    <strong>Retail</strong>
                     <p class="text-gray-600">Digital transformation solutions for modern retail experiences.</p>
                 </div>
             </div>
