Update: Reorganized industries list and improved content

--- a/home.html
+++ b/home.html
@@ -212,16 +212,10 @@
     currentIndex: 0,
     industries: [
         {
-            title: 'Healthcare',
+            title: 'Life Sciences & Pharma',
             description: 'Improve patient care and operational efficiency with our healthcare solutions.',
             image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuDsfDIxe6yfklOxeH-_FzE_soBcypZjmu5LTrmQMoMQFYtLeURt0YNvg4IM81em8IItFiYmCIK7qhryIivfc4FtwxAJciClfStKFidpdxHf9cD4tgSnxwtvTIxygpHT_yz07NG7BZUzr4EXQeuSXFHpsLzs_BBSdaETlF-00YGtrGC-poeeBbrWB0SZ8nTRiYAVBhq64MI8vZee47yzvlXek5L2lWQinZ5o_5pPuba3uNuIFh7m6s97VAcH7syFaZ5hGJ6bPHqUubI',
             link: 'industries/lifesciences-pharma/'
-        },
-        {
-            title: 'Finance',
-            description: 'Enhance financial services with innovative technologies and secure platforms.',
-            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuAOqHlXd2nJoomlnXFgQ-WqaOyjqAO9eHeuXaPaYLlJcWCsJHzXxRinsO7-1c1mghh5qqNH7JkS-lpdkfZZjHImI39ewSBrYq-1LwOAHtoVKcRYuE0dpfamMset0vJr2DfQ2vEH_WLNuf21qDTGgzGLHr546AcQov3rAn1_WVCGwe2BMF9MAC7nKLKBKiwdpnmYQ0DHCxqU9e_5P78jFDc6OdeQfQKmxpwN4K4Zfrm8fB7sp0p83Hxu01-EvZhqdxALVq0fSG8R5fw',
-            link: 'industries/financialservices/'
         },
         {
             title: 'Retail',
@@ -230,7 +224,7 @@
             link: 'industries/retail/'
         },
         {
-            title: 'Manufacturing',
+            title: 'Manufacturing & Consumer Packaged Goods',
             description: 'Optimize manufacturing processes with smart technologies and data-driven insights.',
             image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuBX8JYm_bwIqwPmie3JqCCqqN2cDoZ8v6KfWBPUJEM8YzfmysK5vjE0jYm4Vp5jpGEhoNejhCTa4uf1rSiQz7P4X9UB6LRXuN6qJCUtZY526LUij40IeHQdE0c9ryLzkBUzOYndGfw7wuH6XHmONLvRAGf49R2jWA_jbXyZLXw-HZ27z3zD5m4ZDjPlRh97a9K3DMyIIrk4bTJKAe-tctaybAn48EMQYrw0G1vXadaFb-XWtASP_AIMWb_1q-Hv31PyacguFvSnpv0',
             link: 'industries/manufacturing-cpg/'
@@ -238,26 +232,20 @@
         {
             title: 'Energy & Utilities',
             description: 'Drive sustainability and efficiency in energy production and distribution.',
-            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuCOyt8_qEybJZbgrapujvHiodcXTAeg32Q5CHcIvWEetb1YggegbhcebSZcjuvF01euG8ZWPc5BO3ZXmxfER9X0pFAfiMlWkOE4Lh4s1XQ0GshcLHrQgPbc9MNZgk7L',
+            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuAOqHlXd2nJoomlnXFgQ-WqaOyjqAO9eHeuXaPaYLlJcWCsJHzXxRinsO7-1c1mghh5qqNH7JkS-lpdkfZZjHImI39ewSBrYq-1LwOAHtoVKcRYuE0dpfamMset0vJr2DfQ2vEH_WLNuf21qDTGgzGLHr546AcQov3rAn1_WVCGwe2BMF9MAC7nKLKBKiwdpnmYQ0DHCxqU9e_5P78jFDc6OdeQfQKmxpwN4K4Zfrm8fB7sp0p83Hxu01-EvZhqdxALVq0fSG8R5fw',
             link: 'industries/energy-utilities/'
         },
         {
-            title: 'Life Sciences',
+            title: 'Automotion',
             description: 'Accelerate research and development with cutting-edge technology solutions.',
-            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuA80mgTRPJhDULhtgm_nR2tVdoNXFZUEV5Mig6HMxBXry4LxsK_kbwaPFa_TnwJJTEzyD0HLkTTLnvTlWzL9v1j',
-            link: 'industries/lifesciences-pharma/'
+            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuAOqHlXd2nJoomlnXFgQ-WqaOyjqAO9eHeuXaPaYLlJcWCsJHzXxRinsO7-1c1mghh5qqNH7JkS-lpdkfZZjHImI39ewSBrYq-1LwOAHtoVKcRYuE0dpfamMset0vJr2DfQ2vEH_WLNuf21qDTGgzGLHr546AcQov3rAn1_WVCGwe2BMF9MAC7nKLKBKiwdpnmYQ0DHCxqU9e_5P78jFDc6OdeQfQKmxpwN4K4Zfrm8fB7sp0p83Hxu01-EvZhqdxALVq0fSG8R5fw',
+            link: 'industries/auto/'
         },
         {
-            title: 'Travel & Transportation',
+            title: 'Travel, Transportation & Logistics',
             description: 'Transform mobility and logistics with intelligent transportation solutions.',
-            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuAfR-E_5ClPdCfXoSi8E_HeoR6GZ3MwJ1houxrsDoU5QXzmk4Qd16l4e1pKfPTzChyH1cSX1G7qd7brHt4rqy8',
+            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuAOqHlXd2nJoomlnXFgQ-WqaOyjqAO9eHeuXaPaYLlJcWCsJHzXxRinsO7-1c1mghh5qqNH7JkS-lpdkfZZjHImI39ewSBrYq-1LwOAHtoVKcRYuE0dpfamMset0vJr2DfQ2vEH_WLNuf21qDTGgzGLHr546AcQov3rAn1_WVCGwe2BMF9MAC7nKLKBKiwdpnmYQ0DHCxqU9e_5P78jFDc6OdeQfQKmxpwN4K4Zfrm8fB7sp0p83Hxu01-EvZhqdxALVq0fSG8R5fw',
             link: 'industries/travel-transportation-logistics/'
-        },
-        {
-            title: 'Agriculture',
-            description: 'Modernize farming with smart agriculture and precision farming solutions.',
-            image: 'https://lh3.googleusercontent.com/aida-public/AB6AXuCfb4C-x8uX_B0kQrCwUhKzV_3oeMpjkSvDXLT42stHL54HTx4-PerC8XofELa4HY_O_gVCci4tL_FvviZVRxBnKw',
-            link: 'industries/manufacturing-cpg/agriculture/'
         }
     ],
     init() {
